--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "firebase": "^5.5.8",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^1.0.0-beta2",
-    "react-native-root-toast": "^3.0.1",
     "react-navigation": "^1.1.2",
     "tcomb-form-native": "^0.6.11"
   },
