--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^1.1.2",
     "tcomb-form-native": "^0.6.11"
   },
